Finish alignments other than menu bug. Changed colours. Added top button. changed ipad photo.

--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -1,7 +1,7 @@
 footer{
     text-align: center;
     font-size: small;
-    background-color: darkgray;
+    background-color: rgb(127,127,127);
     min-height: 30px;
     position: relative;
     top: 105px;
